Adjust image scaling factor for Kobo Mini

--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -2,7 +2,7 @@
 \author{Melchizedek}
 \vs p045 0:1 The administrative centre of Satania consists of a cluster of architectural spheres, 57 in number --- Jerusem itself, the 7 major satellites, and the 49 subsatellites. Jerusem, the system capital, is almost 100 times the size of Urantia, although its gravity is a trifle less. Jerusem’s major satellites are the 7 transition worlds, each of which is about 10 times as large as Urantia, while the 7 subsatellites of these transition spheres are just about the size of Urantia.
 \vs p045 0:2 The 7 mansion worlds are the 7 subsatellites of transition world number one.
-\vs p045 0:3 This entire system of 57 architectural worlds is independently lighted, heated, watered, and energized by the co\hyp{}ordination of the Satania Power Centre and the Master Physical Controllers in accordance with the established technique of the physical organization and arrangement of these specially created spheres. They are also physically cared for and otherwise maintained by the native spornagia.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[angle=90,scale=\tunemarkup{pgkoboaurahd}{1.89}\tunemarkup{pghanlin}{1.75}\tunemarkup{pgnexus7}{1.89}\tunemarkup{pgkindledx}{1.58}]{../urantia-pictures/JERUSEM_700.jpg}\caption{Jerusem by Gary~Tonge}\end{figure}}
+\vs p045 0:3 This entire system of 57 architectural worlds is independently lighted, heated, watered, and energized by the co\hyp{}ordination of the Satania Power Centre and the Master Physical Controllers in accordance with the established technique of the physical organization and arrangement of these specially created spheres. They are also physically cared for and otherwise maintained by the native spornagia.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[angle=90,scale=\tunemarkup{pgkobomini}{1.75}\tunemarkup{pgkoboaurahd}{1.89}\tunemarkup{pghanlin}{1.75}\tunemarkup{pgnexus7}{1.89}\tunemarkup{pgkindledx}{1.58}]{../urantia-pictures/JERUSEM_700.jpg}\caption{Jerusem by Gary~Tonge}\end{figure}}
 \usection{1.\bibnobreakspace Transitional Culture Worlds}
 \vs p045 1:1 The 7 major worlds swinging around Jerusem are generally known as the transitional culture spheres. Their rulers are designated from time to time by the Jerusem supreme executive council. These spheres are numbered and named as follows:
 \vs p045 1:2 \pc \bibemph{Number 1. The Finaliter World.} This is the headquarters of the finaliter corps of the local system and is surrounded by the receiving worlds, the 7 mansion worlds, dedicated so fully to the scheme of mortal ascension. The finaliter world is accessible to the inhabitants of all 7 mansion worlds. Transport seraphim carry ascending personalities back and forth on these pilgrimages, which are designed to cultivate their faith in the ultimate destiny of transition mortals. Although the finaliters and their structures are not ordinarily perceptible to morontia vision, you will be more than thrilled, from time to time, when the energy transformers and the Morontia Power Supervisors enable you momentarily to glimpse these high spirit personalities who have actually completed the Paradise ascension, and who have returned to the very worlds where you are beginning this long journey, as the pledge of assurance that you may and can complete the stupendous undertaking. All mansion world sojourners go to the finaliter sphere at least once a year for these assemblies of finaliter visualization.
@@ -18,7 +18,7 @@
 \usection{2.\bibnobreakspace The System Sovereign}
 \vs p045 2:1 The chief executive of a local system of inhabited worlds is a primary Lanonandek Son, the System Sovereign. In our local universe these sovereigns are intrusted with large executive responsibilities, unusual personal prerogatives. Not all universes, even in Orvonton, are so organized as to permit the System Sovereigns to exercise such unusually wide powers of personal discretion in the direction of system affairs. But in all the history of Nebadon these untrammelled executives have exhibited disloyalty only three times. The Lucifer rebellion in the system of Satania was the last and the most widespread of all.
 \vs p045 2:2 In Satania, even after this disastrous upheaval, absolutely no changes have been made in the technique of system administration. The present System Sovereign possesses all the power and exercises all the authority that were invested in his unworthy predecessor except for certain matters now under the supervision of the Constellation Fathers which the Ancients of Days have not yet fully restored to Lanaforge, the successor of Lucifer.
-\vs p045 2:3 \pc The present head of Satania is a gracious and brilliant ruler, and he is a rebellion\hyp{}tested sovereign. When serving as an assistant System Sovereign, Lanaforge was faithful to Michael in an earlier upheaval in the universe of Nebadon. This mighty and brilliant Lord of Satania is a tried and tested administrator. At the time of the second system rebellion in Nebadon, when the System Sovereign stumbled and fell into darkness, Lanaforge, the first assistant to the erring chief, seized the reins of government and so conducted the affairs of the system that comparatively few personalities were lost either on the headquarters worlds or on the inhabited planets of that unfortunate system. Lanaforge bears the distinction of being the only primary Lanonandek Son in all Nebadon who thus functioned loyally in the service of Michael and in the very presence of the default of his brother of superior authority and antecedent rank. Lanaforge will probably not be removed from Jerusem until all the results of the former folly have been overcome and the products of rebellion removed from Satania.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/lanaforge_700x525h.jpg}\caption{Lanaforge by Troy~R.~Bishop}\end{figure}}
+\vs p045 2:3 \pc The present head of Satania is a gracious and brilliant ruler, and he is a rebellion\hyp{}tested sovereign. When serving as an assistant System Sovereign, Lanaforge was faithful to Michael in an earlier upheaval in the universe of Nebadon. This mighty and brilliant Lord of Satania is a tried and tested administrator. At the time of the second system rebellion in Nebadon, when the System Sovereign stumbled and fell into darkness, Lanaforge, the first assistant to the erring chief, seized the reins of government and so conducted the affairs of the system that comparatively few personalities were lost either on the headquarters worlds or on the inhabited planets of that unfortunate system. Lanaforge bears the distinction of being the only primary Lanonandek Son in all Nebadon who thus functioned loyally in the service of Michael and in the very presence of the default of his brother of superior authority and antecedent rank. Lanaforge will probably not be removed from Jerusem until all the results of the former folly have been overcome and the products of rebellion removed from Satania.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/lanaforge_700x525h.jpg}\caption{Lanaforge by Troy~R.~Bishop}\end{figure}}
 \vs p045 2:4 \pc While all the affairs of the isolated worlds of Satania have not been returned to his jurisdiction, Lanaforge discloses great interest in their welfare, and he is a frequent visitor on Urantia. As in other and normal systems, the Sovereign presides over the system council of world rulers, the Planetary Princes and the resident governors general of the isolated worlds. This planetary council assembles from time to time on the headquarters of the system --- “When the Sons of God come together.”
 \vs p045 2:5 Once a week, every 10 days on Jerusem, the Sovereign holds a conclave with some one group of the various orders of personalities domiciled on the headquarters world. These are the charmingly informal hours of Jerusem, and they are never\hyp{}to\hyp{}be\hyp{}forgotten occasions. On Jerusem there exists the utmost fraternity between all the various orders of beings and between each of these groups and the System Sovereign.
 \vs p045 2:6 These unique assemblages occur on the sea of glass, the great gathering field of the system capital. They are purely social and spiritual occasions; nothing pertaining to the planetary administration or even to the ascendant plan is ever discussed. Ascending mortals come together at these times merely to enjoy themselves and to meet their fellow Jerusemites. Those groups which are not being entertained by the Sovereign at these weekly relaxations meet at their own headquarters.
