--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -14,7 +14,7 @@
 \vs p057 2:1 All evolutionary material creations are born of circular and gaseous nebulae, and all such primary nebulae are circular throughout the early part of their gaseous existence. As they grow older, they usually become spiral, and when their function of sun formation has run its course, they often terminate as clusters of stars or as enormous suns surrounded by a varying number of planets, satellites, and smaller groups of matter in many ways resembling your own diminutive solar system.
 \vs p057 2:2 \pc \bibemph{800,000,000,000} years ago the Andronover creation was well established as one of the magnificent primary nebulae of Orvonton. As the astronomers of near\hyp{}by universes looked out upon this phenomenon of space, they saw very little to attract their attention. Gravity estimates made in adjacent creations indicated that space materializations were taking place in the Andronover regions, but that was all.
 \vs p057 2:3 \pc \bibemph{700,000,000,000} years ago the Andronover system was assuming gigantic proportions, and additional physical controllers were dispatched to nine surrounding material creations to afford support and supply co\hyp{}operation to the power centres of this new material system which was so rapidly evolving. At this distant date all of the material bequeathed to the subsequent creations was held within the confines of this gigantic space wheel, which continued ever to whirl and, after reaching its maximum of diameter, to whirl faster and faster as it continued to condense and contract.
-\vs p057 2:4 \pc \bibemph{600,000,000,000} years ago the height of the Andronover energy\hyp{}mobilization period was attained; the nebula had acquired its maximum of mass. At this time it was a gigantic circular gas cloud in shape somewhat like a flattened spheroid. This was the early period of differential mass formation and varying revolutionary velocity. Gravity and other influences were about to begin their work of converting space gases into organized matter.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.37}\tunemarkup{pghanlin}{0.32}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/nebadon_600_billion_bc_700x525h.jpg}\caption{Nebadon 600 Billion B.C. by Troy~R.~Bishop}\end{figure}}
+\vs p057 2:4 \pc \bibemph{600,000,000,000} years ago the height of the Andronover energy\hyp{}mobilization period was attained; the nebula had acquired its maximum of mass. At this time it was a gigantic circular gas cloud in shape somewhat like a flattened spheroid. This was the early period of differential mass formation and varying revolutionary velocity. Gravity and other influences were about to begin their work of converting space gases into organized matter.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.37}\tunemarkup{pghanlin}{0.32}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/nebadon_600_billion_bc_700x525h.jpg}\caption{Nebadon 600 Billion B.C. by Troy~R.~Bishop}\end{figure}}
 \usection{3.\bibnobreakspace The Secondary Nebular Stage}
 \vs p057 3:1 The enormous nebula now began gradually to assume the spiral form and to become clearly visible to the astronomers of even distant universes. This is the natural history of most nebulae; before they begin to throw off suns and start upon the work of universe building, these secondary space nebulae are usually observed as \bibemph{spiral phenomena.}
 \vs p057 3:2 The near\hyp{}by star students of that faraway era, as they observed this metamorphosis of the Andronover nebula, saw exactly what XX century astronomers see when they turn their telescopes spaceward and view the present\hyp{}age spiral nebulae of adjacent outer space.
