--- a/tex/p116.tex
+++ b/tex/p116.tex
@@ -43,7 +43,7 @@
 \vs p116 4:7 \pc But the local universes are the real laboratories in which are worked out the mind experiments, galactic adventures, divinity unfoldings, and personality progressions which, when cosmically totalled, constitute the actual foundation upon which the Supreme is achieving deity evolution in and by experience.
 \vs p116 4:8 In the local universes even the Creators evolve: The presence of the Conjoint Actor evolves from a living power focus to the status of the divine personality of a Universe Mother Spirit; the Creator Son evolves from the nature of existential Paradise divinity to the experiential nature of supreme sovereignty. The local universes are the starting points of true evolution, the spawning grounds of bona fide imperfect personalities endowed with the freewill choice of becoming cocreators of themselves as they are to be.
 \vs p116 4:9 The Magisterial Sons in their bestowals upon the evolutionary worlds eventually acquire natures expressive of Paradise divinity in experiential unification with the highest spiritual values of material human nature. And through these and other bestowals the Michael Creators likewise acquire the natures and cosmic viewpoints of their actual local universe children. Such Master Creator Sons approximate the completion of subsupreme experience; and when their local universe sovereignty is enlarged to embrace the associated Creative Spirits, it may be said to approximate the limits of supremacy within the present potentials of the evolutionary grand universe.
-\vs p116 4:10 When the bestowal Sons reveal new ways for man to find God, they are not creating these paths of divinity attainment; rather are they illuminating the everlasting highways of progression which lead through the presence of the Supreme to the person of the Paradise Father.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/highways_of_heaven_700x525h.jpg}\caption{Highways of Heaven by Troy~R.~Bishop}\end{figure}}
+\vs p116 4:10 When the bestowal Sons reveal new ways for man to find God, they are not creating these paths of divinity attainment; rather are they illuminating the everlasting highways of progression which lead through the presence of the Supreme to the person of the Paradise Father.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/highways_of_heaven_700x525h.jpg}\caption{Highways of Heaven by Troy~R.~Bishop}\end{figure}}
 \vs p116 4:11 The local universe is the starting place for those personalities who are farthest from God, and who can therefore experience the greatest degree of spiritual ascent in the universe, can achieve the maximum of experiential participation in the cocreation of themselves. These same local universes likewise provide the greatest possible depth of experience for the descending personalities, who thereby achieve something which is to them just as meaningful as the Paradise ascent is to an evolving creature.
 \vs p116 4:12 \pc Mortal man appears to be necessary to the full function of God the Sevenfold as this divinity grouping culminates in the actualizing Supreme. There are many other orders of universe personalities who are equally necessary to the evolution of the almighty power of the Supreme, but this portrayal is presented for the edification of human beings, hence is largely limited to those factors operating in the evolution of God the Sevenfold which are related to mortal man.
 \usection{5.\bibnobreakspace The Almighty and the Sevenfold Controllers}
