--- a/tex/p126.tex
+++ b/tex/p126.tex
@@ -13,7 +13,7 @@
 \vs p126 1:6 The improved economic condition of the Nazareth family was reflected in many ways about the home and especially in the increased number of smooth white boards which were used as writing slates, the writing being done with charcoal. Jesus was also permitted to resume his music lessons; he was very fond of playing the harp.
 \vs p126 1:7 \pc Throughout this year it can truly be said that Jesus “grew in favour with man and with God.” The prospects of the family seemed good; the future was bright.
 \usection{2.\bibnobreakspace The Death of Joseph}
-\vs p126 2:1 All did go well until that fateful day of Tuesday, September 25, when a runner from Sepphoris brought to this Nazareth home the tragic news that Joseph had been severely injured by the falling of a derrick while at work on the governor’s residence. The messenger from Sepphoris had stopped at the shop on the way to Joseph’s home, informing Jesus of his father’s accident, and they went together to the house to break the sad news to Mary. Jesus desired to go immediately to his father, but Mary would hear to nothing but that she must hasten to her husband’s side. She directed that James, then 10 years of age, should accompany her to Sepphoris while Jesus remained home with the younger children until she should return, as she did not know how seriously Joseph had been injured. But Joseph died of his injuries before Mary arrived. They brought him to Nazareth, and on the following day he was laid to rest with his fathers.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.46}\tunemarkup{pgkindledx}{0.35}]{../urantia-pictures/Burial-of-Joseph.jpg}\caption{The Burial of Joseph by Russ~Docken}\end{figure}}
+\vs p126 2:1 All did go well until that fateful day of Tuesday, September 25, when a runner from Sepphoris brought to this Nazareth home the tragic news that Joseph had been severely injured by the falling of a derrick while at work on the governor’s residence. The messenger from Sepphoris had stopped at the shop on the way to Joseph’s home, informing Jesus of his father’s accident, and they went together to the house to break the sad news to Mary. Jesus desired to go immediately to his father, but Mary would hear to nothing but that she must hasten to her husband’s side. She directed that James, then 10 years of age, should accompany her to Sepphoris while Jesus remained home with the younger children until she should return, as she did not know how seriously Joseph had been injured. But Joseph died of his injuries before Mary arrived. They brought him to Nazareth, and on the following day he was laid to rest with his fathers.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.46}\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.46}\tunemarkup{pgkindledx}{0.35}]{../urantia-pictures/Burial-of-Joseph.jpg}\caption{The Burial of Joseph by Russ~Docken}\end{figure}}
 \vs p126 2:2 \pc Just at the time when prospects were good and the future looked bright, an apparently cruel hand struck down the head of this Nazareth household, the affairs of this home were disrupted, and every plan for Jesus and his future education was demolished. This carpenter lad, now just past 14 years of age, awakened to the realization that he had not only to fulfil the commission of his heavenly Father to reveal the divine nature on earth and in the flesh, but that his young human nature must also shoulder the responsibility of caring for his widowed mother and seven brothers and sisters --- and another yet to be born. This lad of Nazareth now became the sole support and comfort of this so suddenly bereaved family. Thus were permitted those occurrences of the natural order of events on Urantia which would force this young man of destiny so early to assume these heavy but highly educational and disciplinary responsibilities attendant upon becoming the head of a human family, of becoming father to his own brothers and sisters, of supporting and protecting his mother, of functioning as guardian of his father’s home, the only home he was to know while on this world.
 \vs p126 2:3 Jesus cheerfully accepted the responsibilities so suddenly thrust upon him, and he carried them faithfully to the end. At least one great problem and anticipated difficulty in his life had been tragically solved --- he would not now be expected to go to Jerusalem to study under the rabbis. It remained always true that Jesus “sat at no man’s feet.” He was ever willing to learn from even the humblest of little children, but he never derived authority to teach truth from human sources.
 \vs p126 2:4 Still he knew nothing of the Gabriel visit to his mother before his birth; he only learned of this from John on the day of his baptism, at the beginning of his public ministry.
