--- a/tex/p127.tex
+++ b/tex/p127.tex
@@ -57,7 +57,7 @@
 \vs p127 5:1 Although Jesus was poor, his social standing in Nazareth was in no way impaired. He was one of the foremost young men of the city and very highly regarded by most of the young women. Since Jesus was such a splendid specimen of robust and intellectual manhood, and considering his reputation as a spiritual leader, it was not strange that Rebecca, the eldest daughter of Ezra, a wealthy merchant and trader of Nazareth, should discover that she was slowly falling in love with this son of Joseph. She first confided her affection to Miriam, Jesus’ sister, and Miriam in turn talked all this over with her mother. Mary was intensely aroused. Was she about to lose her son, now become the indispensable head of the family? Would troubles never cease? What next could happen? And then she paused to contemplate what effect marriage would have upon Jesus’ future career; not often, but at least sometimes, did she recall the fact that Jesus was a “child of promise.” After she and Miriam had talked this matter over, they decided to make an effort to stop it before Jesus learned about it, by going direct to Rebecca, laying the whole story before her, and honestly telling her about their belief that Jesus was a son of destiny; that he was to become a great religious leader, perhaps the Messiah.
 \vs p127 5:2 Rebecca listened intently; she was thrilled with the recital and more than ever determined to cast her lot with this man of her choice and to share his career of leadership. She argued (to herself) that such a man would all the more need a faithful and efficient wife. She interpreted Mary’s efforts to dissuade her as a natural reaction to the dread of losing the head and sole support of her family; but knowing that her father approved of her attraction for the carpenter’s son, she rightly reckoned that he would gladly supply the family with sufficient income fully to compensate for the loss of Jesus’ earnings. When her father agreed to such a plan, Rebecca had further conferences with Mary and Miriam, and when she failed to win their support, she made bold to go directly to Jesus. This she did with the co\hyp{}operation of her father, who invited Jesus to their home for the celebration of Rebecca’s 17\ts{th} birthday.
 \vs p127 5:3 Jesus listened attentively and sympathetically to the recital of these things, first by the father, then by Rebecca herself. He made kindly reply to the effect that no amount of money could take the place of his obligation personally to rear his father’s family, to \textcolour{ubdarkred}{“fulfil the most sacred of all human trusts --- loyalty to one’s own flesh and blood.”} Rebecca’s father was deeply touched by Jesus’ words of family devotion and retired from the conference. His only remark to Mary, his wife, was: “We can’t have him for a son; he is too noble for us.”
-\vs p127 5:4 Then began that eventful talk with Rebecca. Thus far in his life, Jesus had made little distinction in his association with boys and girls, with young men and young women. His mind had been altogether too much occupied with the pressing problems of practical earthly affairs and the intriguing contemplation of his eventual career “about his Father’s business” ever to have given serious consideration to the consummation of personal love in human marriage. But now he was face to face with another of those problems which every average human being must confront and decide. Indeed was he “tested in all points like as you are.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.46}\tunemarkup{pghanlin}{0.39}\tunemarkup{pgnexus7}{0.4}\tunemarkup{pgkindledx}{0.31}]{../urantia-pictures/Jesus-Rebecca.jpg}\caption{Rebecca's Marriage Proposal by Russ~Docken}\end{figure}}
+\vs p127 5:4 Then began that eventful talk with Rebecca. Thus far in his life, Jesus had made little distinction in his association with boys and girls, with young men and young women. His mind had been altogether too much occupied with the pressing problems of practical earthly affairs and the intriguing contemplation of his eventual career “about his Father’s business” ever to have given serious consideration to the consummation of personal love in human marriage. But now he was face to face with another of those problems which every average human being must confront and decide. Indeed was he “tested in all points like as you are.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.39}\tunemarkup{pgkoboaurahd}{0.46}\tunemarkup{pghanlin}{0.39}\tunemarkup{pgnexus7}{0.4}\tunemarkup{pgkindledx}{0.31}]{../urantia-pictures/Jesus-Rebecca.jpg}\caption{Rebecca's Marriage Proposal by Russ~Docken}\end{figure}}
 \vs p127 5:5 After listening attentively, he sincerely thanked Rebecca for her expressed admiration, adding, \textcolour{ubdarkred}{“it shall cheer and comfort me all the days of my life.”} He explained that he was not free to enter into relations with any woman other than those of simple brotherly regard and pure friendship. He made it clear that his first and paramount duty was the rearing of his father’s family, that he could not consider marriage until that was accomplished; and then he added: \textcolour{ubdarkred}{“If I am a son of destiny, I must not assume obligations of lifelong duration until such a time as my destiny shall be made manifest.”}
 \vs p127 5:6 Rebecca was heartbroken. She refused to be comforted and importuned her father to leave Nazareth until he finally consented to move to Sepphoris. In after years, to the many men who sought her hand in marriage, Rebecca had but one answer. She lived for only one purpose --- to await the hour when this, to her, the greatest man who ever lived would begin his career as a teacher of living truth. And she followed him devotedly through his eventful years of public labour, being present (unobserved by Jesus) that day when he rode triumphantly into Jerusalem; and she stood “among the other women” by the side of Mary on that fateful and tragic afternoon when the Son of Man hung upon the cross, to her, as well as to countless worlds on high, “the one altogether lovely and the greatest among ten thousand.”
 \usection{6.\bibnobreakspace His Twentieth Year (A.D.\,14)}
