--- a/tex/p173.tex
+++ b/tex/p173.tex
@@ -10,7 +10,7 @@
 \vs p173 1:4 These temple money\hyp{}changers not only conducted a regular banking business for profit in the exchange of more than 20 sorts of money which the visiting pilgrims would periodically bring to Jerusalem, but they also engaged in all other kinds of transactions pertaining to the banking business. Both the temple treasury and the temple rulers profited tremendously from these commercial activities. It was not uncommon for the temple treasury to hold upwards of \$10,000,000 while the common people languished in poverty and continued to pay these unjust levies.
 \vs p173 1:5 \pc In the midst of this noisy aggregation of money\hyp{}changers, merchandisers, and cattle sellers, Jesus, on this Monday morning, attempted to teach the gospel of the heavenly kingdom. He was not alone in resenting this profanation of the temple; the common people, especially the Jewish visitors from foreign provinces, also heartily resented this profiteering desecration of their national house of worship. At this time the Sanhedrin itself held its regular meetings in a chamber surrounded by all this babble and confusion of trade and barter.
 \vs p173 1:6 As Jesus was about to begin his address, two things happened to arrest his attention. At the money table of a near\hyp{}by exchanger a violent and heated argument had arisen over the alleged overcharging of a Jew from Alexandria, while at the same moment the air was rent by the bellowing of a drove of some 100 bullocks which was being driven from one section of the animal pens to another. As Jesus paused, silently but thoughtfully contemplating this scene of commerce and confusion, close by he beheld a simple\hyp{}minded Galilean, a man he had once talked with in Iron, being ridiculed and jostled about by supercilious and would\hyp{}be superior Judeans; and all of this combined to produce one of those strange and periodic uprisings of indignant emotion in the soul of Jesus.
-\vs p173 1:7 To the amazement of his apostles, standing near at hand, who refrained from participation in what so soon followed, Jesus stepped down from the teaching platform and, going over to the lad who was driving the cattle through the court, took from him his whip of cords and swiftly drove the animals from the temple. But that was not all; he strode majestically before the wondering gaze of the thousands assembled in the temple court to the farthest cattle pen and proceeded to open the gates of every stall and to drive out the imprisoned animals. By this time the assembled pilgrims were electrified, and with uproarious shouting they moved toward the bazaars and began to overturn the tables of the money\hyp{}changers. In less than five minutes all commerce had been swept from the temple. By the time the near\hyp{}by Roman guards had appeared on the scene, all was quiet, and the crowds had become orderly; Jesus, returning to the speaker’s stand, spoke to the multitude: \textcolour{ubdarkred}{“You have this day witnessed that which is written in the Scriptures: ‘My house shall be called a house of prayer for all nations, but you have made it a den of robbers.’”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.48}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.63}\tunemarkup{pgkindledx}{0.48}]{../urantia-pictures/William_Hole_Jesus_Casts_Out_The_Money_Changers_525.jpg}\caption{Jesus Casts Out The Money-Changers by William~Hole}\end{figure}}
+\vs p173 1:7 To the amazement of his apostles, standing near at hand, who refrained from participation in what so soon followed, Jesus stepped down from the teaching platform and, going over to the lad who was driving the cattle through the court, took from him his whip of cords and swiftly drove the animals from the temple. But that was not all; he strode majestically before the wondering gaze of the thousands assembled in the temple court to the farthest cattle pen and proceeded to open the gates of every stall and to drive out the imprisoned animals. By this time the assembled pilgrims were electrified, and with uproarious shouting they moved toward the bazaars and began to overturn the tables of the money\hyp{}changers. In less than five minutes all commerce had been swept from the temple. By the time the near\hyp{}by Roman guards had appeared on the scene, all was quiet, and the crowds had become orderly; Jesus, returning to the speaker’s stand, spoke to the multitude: \textcolour{ubdarkred}{“You have this day witnessed that which is written in the Scriptures: ‘My house shall be called a house of prayer for all nations, but you have made it a den of robbers.’”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.56}\tunemarkup{pgkoboaurahd}{0.48}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.63}\tunemarkup{pgkindledx}{0.48}]{../urantia-pictures/William_Hole_Jesus_Casts_Out_The_Money_Changers_525.jpg}\caption{Jesus Casts Out The Money-Changers by William~Hole}\end{figure}}
 \vs p173 1:8 But before he could utter other words, the great assembly broke out in hosannas of praise, and presently a throng of youths stepped out from the crowd to sing grateful hymns of appreciation that the profane and profiteering merchandisers had been ejected from the sacred temple. By this time certain of the priests had arrived on the scene, and one of them said to Jesus, “Do you not hear what the children of the Levites say?” And the Master replied, \textcolour{ubdarkred}{“Have you never read, ‘Out of the mouths of babes and sucklings has praise been perfected’?”} And all the rest of that day while Jesus taught, guards set by the people stood watch at every archway, and they would not permit anyone to carry even an empty vessel across the temple courts.
 \vs p173 1:9 \pc When the chief priests and the scribes heard about these happenings, they were dumbfounded. All the more they feared the Master, and all the more they determined to destroy him. But they were nonplussed. They did not know how to accomplish his death, for they greatly feared the multitudes, who were now so outspoken in their approval of his overthrow of the profane profiteers. And all this day, a day of quiet and peace in the temple courts, the people heard Jesus’ teaching and literally hung on his words.
 \vs p173 1:10 This surprising act of Jesus was beyond the comprehension of his apostles. They were so taken aback by this sudden and unexpected move of their Master that they remained throughout the whole episode huddled together near the speaker’s stand; they never lifted a hand to further this cleansing of the temple. If this spectacular event had occurred the day before, at the time of Jesus’ triumphal arrival at the temple at the termination of his tumultuous procession through the gates of the city, all the while loudly acclaimed by the multitude, they would have been ready for it, but coming as it did, they were wholly unprepared to participate.
