--- a/tex/p177.tex
+++ b/tex/p177.tex
@@ -6,7 +6,7 @@
 \vs p177 0:4 Upon hearing these words, David and his armed guards withdrew; but as Jesus started off alone, John Mark came forward with a small basket containing food and water and suggested that, if he intended to be away all day, he might find himself hungry. The Master smiled on John and reached down to take the basket.
 \usection{1.\bibnobreakspace One Day Alone with God}
 \vs p177 1:1 As Jesus was about to take the lunch basket from John’s hand, the young man ventured to say: “But, Master, you may set the basket down while you turn aside to pray and go on without it. Besides, if I should go along to carry the lunch, you would be more free to worship, and I will surely be silent. I will ask no questions and will stay by the basket when you go apart by yourself to pray.”
-\vs p177 1:2 While making this speech, the temerity of which astonished some of the near\hyp{}by listeners, John had made bold to hold on to the basket. There they stood, both John and Jesus holding the basket. Presently the Master let go and, looking down on the lad, said: \textcolour{ubdarkred}{“Since with all your heart you crave to go with me, it shall not be denied you. We will go off by ourselves and have a good visit. You may ask me any question that arises in your heart, and we will comfort and console each other. You may start out carrying the lunch, and when you grow weary, I will help you. Follow on with me.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.57}\tunemarkup{pgnexus7}{0.52}\tunemarkup{pgkindledx}{0.47}]{../urantia-pictures/One_Day_Alone_With_God.jpg}\caption{One Day Alone With God by Del~Parson}\end{figure}}
+\vs p177 1:2 While making this speech, the temerity of which astonished some of the near\hyp{}by listeners, John had made bold to hold on to the basket. There they stood, both John and Jesus holding the basket. Presently the Master let go and, looking down on the lad, said: \textcolour{ubdarkred}{“Since with all your heart you crave to go with me, it shall not be denied you. We will go off by ourselves and have a good visit. You may ask me any question that arises in your heart, and we will comfort and console each other. You may start out carrying the lunch, and when you grow weary, I will help you. Follow on with me.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.57}\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.57}\tunemarkup{pgnexus7}{0.52}\tunemarkup{pgkindledx}{0.47}]{../urantia-pictures/One_Day_Alone_With_God.jpg}\caption{One Day Alone With God by Del~Parson}\end{figure}}
 \vs p177 1:3 Jesus did not return to the camp that evening until after sunset. The Master spent this last day of quiet on earth visiting with this truth\hyp{}hungry youth and talking with his Paradise Father. This event has become known on high as “the day which a young man spent with God in the hills.” Forever this occasion exemplifies the willingness of the Creator to fellowship the creature. Even a youth, if the desire of the heart is really supreme, can command the attention and enjoy the loving companionship of the God of a universe, actually experience the unforgettable ecstasy of being alone with God in the hills, and for a whole day. And such was the unique experience of John Mark on this Wednesday in the hills of Judea.
 \vs p177 1:4 Jesus visited much with John, talking freely about the affairs of this world and the next. John told Jesus how much he regretted that he had not been old enough to be one of the apostles and expressed his great appreciation that he had been permitted to follow on with them since their first preaching at the Jordan ford near Jericho, except for the trip to Phoenicia. Jesus warned the lad not to become discouraged by impending events and assured him he would live to become a mighty messenger of the kingdom.
 \vs p177 1:5 John Mark was thrilled by the memory of this day with Jesus in the hills, but he never forgot the Master’s final admonition, spoken just as they were about to return to the Gethsemane camp, when he said: \textcolour{ubdarkred}{“Well, John, we have had a good visit, a real day of rest, but see to it that you tell no man the things which I told you.”} And John Mark never did reveal anything that transpired on this day which he spent with Jesus in the hills.
