--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -4,7 +4,7 @@
 \vs p182 0:2 As Jesus and the 11 made their way back to camp, the apostles began to wonder about the meaning of Judas’s prolonged absence, and they spoke to one another concerning the Master’s prediction that one of them would betray him, and for the first time they suspected that all was not well with Judas Iscariot. But they did not engage in open comment about Judas until they reached the camp and observed that he was not there, waiting to receive them. When they all besieged Andrew to know what had become of Judas, their chief remarked only, “I do not know where Judas is, but I fear he has deserted us.”
 \usection{1.\bibnobreakspace The Last Group Prayer}
 \vs p182 1:1 A few moments after arriving at camp, Jesus said to them: \textcolour{ubdarkred}{“My friends and brethren, my time with you is now very short, and I desire that we draw apart by ourselves while we pray to our Father in heaven for strength to sustain us in this hour and henceforth in all the work we must do in his name.”}
-\vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.62}\tunemarkup{pgkindledx}{0.46}]{../urantia-pictures/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael~Dudash}\end{figure}}
+\vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.56}\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.62}\tunemarkup{pgkindledx}{0.46}]{../urantia-pictures/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael~Dudash}\end{figure}}
 \vs p182 1:3 \textcolour{ubdarkred}{“Father, my hour has come; now glorify your Son that the Son may glorify you. I know that you have given me full authority over all living creatures in my realm, and I will give eternal life to all who will become faith sons of God. And this is eternal life, that my creatures should know you as the only true God and Father of all, and that they should believe in him whom you sent into the world. Father, I have exalted you on earth and have accomplished the work which you gave me to do. I have almost finished my bestowal upon the children of our own creation; there remains only for me to lay down my life in the flesh. And now, O my Father, glorify me with the glory which I had with you before this world was and receive me once more at your right hand.}
 \vs p182 1:4 \textcolour{ubdarkred}{“I have manifested you to the men whom you chose from the world and gave to me. They are yours --- as all life is in your hands --- you gave them to me, and I have lived among them, teaching them the way of life, and they have believed. These men are learning that all I have comes from you, and that the life I live in the flesh is to make known my Father to the worlds. The truth which you have given to me I have revealed to them. These, my friends and ambassadors, have sincerely willed to receive your word. I have told them that I came forth from you, that you sent me into this world, and that I am about to return to you. Father, I do pray for these chosen men. And I pray for them not as I would pray for the world, but as for those whom I have chosen out of the world to represent me to the world after I have returned to your work, even as I have represented you in this world during my sojourn in the flesh. These men are mine; you gave them to me; but all things which are mine are ever yours, and all that which was yours you have now caused to be mine. You have been exalted in me, and I now pray that I may be honoured in these men. I can no longer be in this world; I am about to return to the work you have given me to do. I must leave these men behind to represent us and our kingdom among men. Father, keep these men faithful as I prepare to yield up my life in the flesh. Help these, my friends, to be one in spirit, even as we are one. As long as I could be with them, I could watch over them and guide them, but now am I about to go away. Be near them, Father, until we can send the new teacher to comfort and strengthen them.}
 \vs p182 1:5 \textcolour{ubdarkred}{“You gave me 12 men, and I have kept them all save one, the son of revenge, who would not have further fellowship with us. These men are weak and frail, but I know we can trust them; I have proved them; they love me, even as they reverence you. While they must suffer much for my sake, I desire that they should also be filled with the joy of the assurance of sonship in the heavenly kingdom. I have given these men your word and have taught them the truth. The world may hate them, even as it has hated me, but I do not ask that you take them out of the world, only that you keep them from the evil in the world. Sanctify them in the truth; your word is truth. And as you sent me into this world, even so am I about to send these men into the world. For their sakes I have lived among men and have consecrated my life to your service that I might inspire them to be purified through the truth I have taught them and the love I have revealed to them. I well know, my Father, that there is no need for me to ask you to watch over these brethren after I have gone; I know you love them even as I, but I do this that they may the better realize the Father loves mortal men even as does the Son.}
@@ -54,5 +54,5 @@
 \vs p182 3:8 The assembled hosts of a vast creation are now hovered over this scene under the transient joint command of Gabriel and the Personalized Adjuster of Jesus. The division commanders of these armies of heaven have repeatedly been warned not to interfere with these transactions on earth unless Jesus himself should order them to intervene.
 \vs p182 3:9 \pc The experience of parting with the apostles was a great strain on the human heart of Jesus; this sorrow of love bore down on him and made it more difficult to face such a death as he well knew awaited him. He realized how weak and how ignorant his apostles were, and he dreaded to leave them. He well knew that the time of his departure had come, but his human heart longed to find out whether there might not possibly be some legitimate avenue of escape from this terrible plight of suffering and sorrow. And when it had thus sought escape, and failed, it was willing to drink the cup. The divine mind of Michael knew he had done his best for the 12 apostles; but the human heart of Jesus wished that more might have been done for them before they should be left alone in the world. Jesus’ heart was being crushed; he truly loved his brethren. He was isolated from his family in the flesh; one of his chosen associates was betraying him. His father Joseph’s people had rejected him and thereby sealed their doom as a people with a special mission on earth. His soul was tortured by baffled love and rejected mercy. It was just one of those awful human moments when everything seems to bear down with crushing cruelty and terrible agony.
 \vs p182 3:10 Jesus’ humanity was not insensible to this situation of private loneliness, public shame, and the appearance of the failure of his cause. All these sentiments bore down on him with indescribable heaviness. In this great sorrow his mind went back to the days of his childhood in Nazareth and to his early work in Galilee. At the time of this great trial there came up in his mind many of those pleasant scenes of his earthly ministry. And it was from these old memories of Nazareth, Capernaum, Mount Hermon, and of the sunrise and sunset on the shimmering Sea of Galilee, that he soothed himself as he made his human heart strong and ready to encounter the traitor who should so soon betray him.
-\vs p182 3:11 Before Judas and the soldiers arrived, the Master had fully regained his customary poise; the spirit had triumphed over the flesh; faith had asserted itself over all human tendencies to fear or entertain doubt. The supreme test of the full realization of the human nature had been met and acceptably passed. Once more the Son of Man was prepared to face his enemies with equanimity and in the full assurance of his invincibility as a mortal man unreservedly dedicated to the doing of his Father’s will.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/i_found_my_heart_at_gethsemane_700x525h.jpg}\caption{I Found My Heart at Gethsemane by Troy~R.~Bishop}\end{figure}}
+\vs p182 3:11 Before Judas and the soldiers arrived, the Master had fully regained his customary poise; the spirit had triumphed over the flesh; faith had asserted itself over all human tendencies to fear or entertain doubt. The supreme test of the full realization of the human nature had been met and acceptably passed. Once more the Son of Man was prepared to face his enemies with equanimity and in the full assurance of his invincibility as a mortal man unreservedly dedicated to the doing of his Father’s will.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/i_found_my_heart_at_gethsemane_700x525h.jpg}\caption{I Found My Heart at Gethsemane by Troy~R.~Bishop}\end{figure}}
 \quizlink
