--- a/tex/p188.tex
+++ b/tex/p188.tex
@@ -7,7 +7,7 @@
 \vs p188 1:1 When Joseph and Nicodemus arrived at Golgotha, they found the soldiers taking Jesus down from the cross and the representatives of the Sanhedrin standing by to see that none of Jesus’ followers prevented his body from going to the criminal burial pits. When Joseph presented Pilate’s order for the Master’s body to the centurion, the Jews raised a tumult and clamoured for its possession. In their raving they sought violently to take possession of the body, and when they did this, the centurion ordered four of his soldiers to his side, and with drawn swords they stood astride the Master’s body as it lay there on the ground. The centurion ordered the other soldiers to leave the two thieves while they drove back this angry mob of infuriated Jews. When order had been restored, the centurion read the permit from Pilate to the Jews and, stepping aside, said to Joseph: “This body is yours to do with as you see fit. I and my soldiers will stand by to see that no man interferes.”
 \vs p188 1:2 A crucified person could not be buried in a Jewish cemetery; there was a strict law against such a procedure. Joseph and Nicodemus knew this law, and on the way out to Golgotha they had decided to bury Jesus in Joseph’s new family tomb, hewn out of solid rock, located a short distance north of Golgotha and across the road leading to Samaria. No one had ever lain in this tomb, and they thought it appropriate that the Master should rest there. Joseph really believed that Jesus would rise from the dead, but Nicodemus was very doubtful. These former members of the Sanhedrin had kept their faith in Jesus more or less of a secret, although their fellow Sanhedrists had long suspected them, even before they withdrew from the council. From now on they were the most outspoken disciples of Jesus in all Jerusalem.
 \vs p188 1:3 At about 16:30 the burial procession of Jesus of Nazareth started from Golgotha for Joseph’s tomb across the way. The body was wrapped in a linen sheet as the four men carried it, followed by the faithful women watchers from Galilee. The mortals who bore the material body of Jesus to the tomb were: Joseph, Nicodemus, John, and the Roman centurion.
-\vs p188 1:4 They carried the body into the tomb, a chamber about 3\,m\ts{2}, where they hurriedly prepared it for burial. The Jews did not really bury their dead; they actually embalmed them. Joseph and Nicodemus had brought with them large quantities of myrrh and aloes, and they now wrapped the body with bandages saturated with these solutions. When the embalming was completed, they tied a napkin about the face, wrapped the body in a linen sheet, and reverently placed it on a shelf in the tomb.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{6.5}\tunemarkup{pghanlin}{5.56}\tunemarkup{pgnexus7}{4.63}\tunemarkup{pgkindledx}{3.4}]{../urantia-pictures/Carl_Bloch_The_Entombment_of_Christ_525.jpg}\caption{The Entombment of Christ by Carl~Bloch}\end{figure}}
+\vs p188 1:4 They carried the body into the tomb, a chamber about 3\,m\ts{2}, where they hurriedly prepared it for burial. The Jews did not really bury their dead; they actually embalmed them. Joseph and Nicodemus had brought with them large quantities of myrrh and aloes, and they now wrapped the body with bandages saturated with these solutions. When the embalming was completed, they tied a napkin about the face, wrapped the body in a linen sheet, and reverently placed it on a shelf in the tomb.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{5.56}\tunemarkup{pgkoboaurahd}{6.5}\tunemarkup{pghanlin}{5.56}\tunemarkup{pgnexus7}{4.63}\tunemarkup{pgkindledx}{3.4}]{../urantia-pictures/Carl_Bloch_The_Entombment_of_Christ_525.jpg}\caption{The Entombment of Christ by Carl~Bloch}\end{figure}}
 \vs p188 1:5 After placing the body in the tomb, the centurion signalled for his soldiers to help roll the doorstone up before the entrance to the tomb. The soldiers then departed for Gehenna with the bodies of the thieves while the others returned to Jerusalem, in sorrow, to observe the Passover feast according to the laws of Moses.
 \vs p188 1:6 There was considerable hurry and haste about the burial of Jesus because this was preparation day and the Sabbath was drawing on apace. The men hurried back to the city, but the women lingered near the tomb until it was very dark.
 \vs p188 1:7 While all this was going on, the women were hiding near at hand so that they saw it all and observed where the Master had been laid. They thus secreted themselves because it was not permissible for women to associate with men at such a time. These women did not think Jesus had been properly prepared for burial, and they agreed among themselves to go back to the home of Joseph, rest over the Sabbath, make ready spices and ointments, and return on Sunday morning properly to prepare the Master’s body for the death rest. The women who thus tarried by the tomb on this Friday evening were: Mary Magdalene, Mary the wife of Clopas, Martha another sister of Jesus’ mother, and Rebecca of Sepphoris.
@@ -53,7 +53,7 @@
 \vs p188 5:3 Jesus, by the power of his personal love for men, could break the hold of sin and evil. He thereby set men free to choose better ways of living. Jesus portrayed a deliverance from the past which in itself promised a triumph for the future. Forgiveness thus provided salvation. The beauty of divine love, once fully admitted to the human heart, forever destroys the charm of sin and the power of evil.
 \vs p188 5:4 \pc The sufferings of Jesus were not confined to the crucifixion. In reality, Jesus of Nazareth spent upward of 25 years on the cross of a real and intense mortal existence. The real value of the cross consists in the fact that it was the supreme and final expression of his love, the completed revelation of his mercy.
 \vs p188 5:5 \pc On millions of inhabited worlds, tens of trillions of evolving creatures who may have been tempted to give up the moral struggle and abandon the good fight of faith, have taken one more look at Jesus on the cross and then have forged on ahead, inspired by the sight of God’s laying down his incarnate life in devotion to the unselfish service of man.
-\vs p188 5:6 The triumph of the death on the cross is all summed up in the spirit of Jesus’ attitude toward those who assailed him. He made the cross an eternal symbol of the triumph of love over hate and the victory of truth over evil when he prayed, \textcolour{ubdarkred}{“Father, forgive them, for they know not what they do.”} That devotion of love was contagious throughout a vast universe; the disciples caught it from their Master. The very first teacher of his gospel who was called upon to lay down his life in this service, said, as they stoned him to death, “Lay not this sin to their charge.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.58}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.49}\tunemarkup{pgkindledx}{0.49}]{../urantia-pictures/Russ_Docken_Father_forgive_them_525.jpg}\caption{Father Forgive Them by Russ~Docken}\end{figure}}
+\vs p188 5:6 The triumph of the death on the cross is all summed up in the spirit of Jesus’ attitude toward those who assailed him. He made the cross an eternal symbol of the triumph of love over hate and the victory of truth over evil when he prayed, \textcolour{ubdarkred}{“Father, forgive them, for they know not what they do.”} That devotion of love was contagious throughout a vast universe; the disciples caught it from their Master. The very first teacher of his gospel who was called upon to lay down his life in this service, said, as they stoned him to death, “Lay not this sin to their charge.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.56}\tunemarkup{pgkoboaurahd}{0.58}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.49}\tunemarkup{pgkindledx}{0.49}]{../urantia-pictures/Russ_Docken_Father_forgive_them_525.jpg}\caption{Father Forgive Them by Russ~Docken}\end{figure}}
 \vs p188 5:7 The cross makes a supreme appeal to the best in man because it discloses one who was willing to lay down his life in the service of his fellow men. Greater love no man can have than this: that he would be willing to lay down his life for his friends --- and Jesus had such a love that he was willing to lay down his life for his enemies, a love greater than any which had hitherto been known on earth.
 \vs p188 5:8 On other worlds, as well as on Urantia, this sublime spectacle of the death of the human Jesus on the cross of Golgotha has stirred the emotions of mortals, while it has aroused the highest devotion of the angels.
 \vs p188 5:9 \pc The cross is that high symbol of sacred service, the devotion of one’s life to the welfare and salvation of one’s fellows. The cross is not the symbol of the sacrifice of the innocent Son of God in the place of guilty sinners and in order to appease the wrath of an offended God, but it does stand forever, on earth and throughout a vast universe, as a sacred symbol of the good bestowing themselves upon the evil and thereby saving them by this very devotion of love. The cross does stand as the token of the highest form of unselfish service, the supreme devotion of the full bestowal of a righteous life in the service of wholehearted ministry, even in death, the death of the cross. And the very sight of this great symbol of the bestowal life of Jesus truly inspires all of us to want to go and do likewise.
